# rust-polars

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: dataframe.rs  main.rs  utils.rs
